Merged revisions 76763 via svnmerge from svn+ssh://pythondev@svn.python.org/python/trunk

........
  r76763 | antoine.pitrou | 2009-12-12 20:13:08 +0100 (sam., 12 déc. 2009) | 7 lines

  Issue #7466: segmentation fault when the garbage collector is called
  in the middle of populating a tuple.  Patch by Florent Xicluna.

  (note: no NEWS entry for trunk since the bug was introduced in 2.7/3.1)
........